[package]
name = "gear-connector-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
bytes = "1"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-serde = { version = "0.8", features = ["json"] }
futures = "0.3"
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
